main/default/objects/Rating_Modifier_Factor__c/Rating_Modifier_Factor__c.object-meta.xml
<CustomObject>
    <label>Rating Modifier Factor</label>
    <nameField>
        <displayFormat>RMF-{0000}</displayFormat>
        <label>Rating Modifier Factor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Modifier Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>