main/default/objects/Rating_Modifier_Factor__c/fields/Factor_Options__c.field-meta.xml
<CustomField>
    <fullName>Factor_Options__c</fullName>
    <label>Factor Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>