main/default/objects/Rating_Modifier_Factor__c/fields/Factor_Type__c.field-meta.xml
<CustomField>
    <fullName>Factor_Type__c</fullName>
    <label>Factor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>