main/default/objects/Rating_Modifier_Factor__c/fields/Factor_Value__c.field-meta.xml
<CustomField>
    <fullName>Factor_Value__c</fullName>
    <label>Factor Value</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>