main/default/objects/Rating_Modifier_Factor__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Rating Modifier Factors</relationshipLabel>
    <relationshipName>Rating_Modifier_Factors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>