main/default/objects/Rating_Modifier_Factor__c/fields/Rating_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier__c</fullName>
    <label>Rating Modifier</label>
    <referenceTo>Rating_Modifiers__c</referenceTo>
    <relationshipLabel>Rating Modifier Factors</relationshipLabel>
    <relationshipName>Rating_Modifier_Factors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>