main/default/objects/Rating_Modifier_Factor__c/listViews/Factors_by_Quote.listView-meta.xml
<ListView>
    <fullName>Factors_by_Quote</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>Rating_Modifier__c</columns>
    <columns>Factor_Value__c</columns>
    <columns>Factor_Min__c</columns>
    <columns>Factor_Max__c</columns>
    <columns>Factor_Default_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote__c</field>
        <operation>equals</operation>
        <value>Tims Full Test MPL Quote</value>
    </filters>
    <label>Factors by Quote</label>
</ListView>